# MaxTruss

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  说明论文.docx
.github/workflows/: c-cpp.yml  run.yml
cuda/: kcore.cu  ktruss.cu  preprocess.cu  tricount.cu
examples/: complete_graph.tsv  tricount_0.tsv  tricount_1.tsv  tricount_42.tsv
include/: clock.h  graph.h  log.h  read_file.h  util.h
scripts/: run.py
src/: graph.cpp  kcore.cpp  kron_gen.cpp  ktruss.cpp  log.cpp  main.cpp  main.cu  preprocess.cpp  read_file.cpp  tricount.cpp  tricount.cu  util.cpp
